# MyWubi

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  build.ps1  config.toml  package.ps1  test_hkl.rs
.cargo/: config.toml
.github/workflows/: release.yml
core_engine/: Cargo.toml
core_engine/benches/: dictionary_bench.rs  state_machine_bench.rs
core_engine/src/: config.rs  config_path.rs  dictionary.rs  lib.rs  state_machine.rs  user_dictionary.rs
core_engine/tests/: state_machine_flow.rs
docs/superpowers/plans/: 2026-06-23-slint-candidate-window-plan.md  2026-06-24-settings-ui.md  2026-06-25-tip-manager.md  2026-06-27-tsf-full-integration-plan.md  2026-06-30-config-path-reload.md  2026-06-30-tsf-language-bar-button.md
docs/superpowers/specs/: 2026-06-23-slint-candidate-window-design.md  2026-06-24-settings-ui-design.md  2026-06-25-tip-manager-design.md  2026-06-27-tsf-full-integration-design.md  2026-06-30-tsf-language-bar-button-design.md
tables/: wubi86.dict
windows/im_engine/: Cargo.toml  build.rs  reg_script.ps1  register_tip.bat  register_tip.ps1
windows/im_engine/src/: candidate_data.rs  candidate_renderer.rs  candidate_window.rs  factory.rs  file_log.rs  guids.rs  key_filter.rs  lib.rs  registrar.rs  reload.rs  screen_geometry.rs  text_service.rs
windows/im_engine/tests/: candidate_data_tests.rs
windows/im_engine/ui/: candidate_window.slint
windows/settings/: Cargo.toml  build.rs
windows/settings/src/: app.rs  color_picker.rs  config_path.rs  elevation.rs  fonts.rs  lib.rs  log.rs  main.rs  save.rs  state.rs  vpk.rs
windows/settings/src/panels/: about.rs  appearance.rs  basic.rs  dictionary.rs  mod.rs  tip_manager.rs
windows/tip_manager/: Cargo.toml
windows/tip_manager/src/: detect.rs  error.rs  guids.rs  lib.rs  profile.rs  registrar.rs
