[workspace]
resolver = "2"
members = [
    "core_engine",
    "windows/im_engine",
    "windows/settings",
    "windows/tip_manager",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/silevilence/MyWubi"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
parking_lot = "0.12"
arc-swap = "1"
thiserror = "1"
windows = { version = "0.62" }
windows-core = "0.62"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true