[package]
name = "core_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "core_engine"
path = "src/lib.rs"
# 同时支持 Rust 内部调用 (rlib) 与跨平台 C-ABI (cdylib/staticlib)
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
log.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dictionary_bench"
harness = false

[[bench]]
name = "state_machine_bench"
harness = false