[package]
name = "im_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "im_engine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
core_engine = { path = "../../core_engine" }
log.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
] }
windows-core = "0.61"

slint = { version = "1", default-features = false, features = ["std", "renderer-software", "compat-1-2"] }
fontdb = { version = "0.21", default-features = false }

[build-dependencies]
slint-build = "1"