[package]
name = "im_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "im_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
core_engine = { path = "../../core_engine" }
tip_manager = { path = "../tip_manager" }
log = { workspace = true, features = ["std"] }
parking_lot.workspace = true
arc-swap.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core.workspace = true