[package]
name = "settings"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "settings"
path = "src/main.rs"

[lib]
name = "settings"
path = "src/lib.rs"

[dependencies]
core_engine = { path = "../../core_engine" }
tip_manager = { path = "../tip_manager" }
serde.workspace = true
toml.workspace = true
log.workspace = true
thiserror.workspace = true
eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
rfd = "0.14"
dirs = "5"
simplelog = "0.12"
wgpu = "0.19"
velopack = "1.2"
semver = "1"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_ColorSystem",
    "Win32_UI_Controls_Dialogs",
    "Win32_Graphics_Gdi",
] }

[dev-dependencies]
tempfile = "3"
