[package]
name = "tip_manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_UI_TextServices",
] }
windows-core = "0.61"
